ajax chat messages + removed the iframe

--- a/trunk/BullyGame/war/css/style.css
+++ b/trunk/BullyGame/war/css/style.css
@@ -101,14 +101,24 @@
 			clear: both;
 			padding: 10px;
 			height: 200px;
+			margin: 0 auto;
+			width: 760px;
 		}
 		
-			#chat iframe {
-				border: none;
-				height: 200px;
-				margin-left: 50px;
-				width: 800px;
+			#chatMessages {
+				height: 150px;
+				overflow: auto;
 			}
+				#chatMessages .chatName {
+					font-weight: bold;
+				}
+				#chatMessages .chatDate {
+					font-size: 11px;
+				}
+				#chatMessages p {
+					margin: 0 0 3px 0;
+					padding: 0;
+				}
 	
 	#footer {
 		border-top: 1px solid grey;
